Thu Sep  06 16:22:54 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Changed a few function calls to match raster's changes to ebits.

Thu Sep  06 04:36:46 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added
	    void ewl_radiobutton_set_chain(Ewl_Widget * w, Ewl_Widget * c)
	  to set which chain the radio button should belong to.
	* Made the Ewl_CheckButton & Ewl_RadioButton call
	    EWL_CALLBACK_VALUE_CHANGED when the checked state has changed.

Thu Sep  06 03:01:56 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Made the Ewl_CheckButton & Ewl_RadioButton use  Nathan's new code.
	* Created new ebits for the Ewl_Button, Ewl_CheckButton &
	  Ewl_RadioButton to work with Nathan's code.

Wed Sep  05 14:30:22 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed some minor bugs from Nathan's changes. They were mostly typos.

Tue Sep  04 00:00:00 2001 Nathan Ingersoll <ningerso@d.umn.edu>
        * Major restructuring of widget heirarchy to eliminate code redundancy.
          Widgets now make extensive use of callbacks to achieve inheritance in
          the methods as well as the data structures.
        * Ripped out large amounts of now redundant code.

Tue Aug  21 20:41:10 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed minor bug in the Ewl_Callbck code.
	* Cleaned up the test program a bit.

Tue Aug  21 18:46:45 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed some unwanted behaviour in the Ewl_Box code.

Tue Aug  21 16:17:49 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Improved __ewl_button_update_label a bit.
	* Made the size of the Ewl_Text etox area allways be the actual size
	  of it without breaking rows.
	* Added a button test part to the test program.
	* Fixed some minor bugs in the Ewl_CheckButton & Ewl_RadioButton
	  widget.

Tue Aug  21 02:18:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Some more typos fixed in the box code.